<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_header"
        android:padding="12dp"
        android:text="@string/tvAddNoti"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/lnAddNotiCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseName"
            android:textColor="#525252"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNotiCourse"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvHintCourseName">

            <AutoCompleteTextView
                android:id="@+id/actvNotiCourse"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/open_sans"
                android:textSize="13sp"
                android:inputType="none"
                android:ellipsize="end"
                android:enabled="false"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnAddNotiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvNotiName"
            android:textColor="#525252"/>
        <EditText
            android:id="@+id/etAddNotiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:hint="@string/tvHintNotiName"
            android:background="@drawable/bg_edittext"
            android:textSize="17dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnAddNotiContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvNotiContent"
            android:textColor="#525252"/>
        <EditText
            android:id="@+id/etAddNotiContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:hint="@string/tvHintNotiContent"
            android:background="@drawable/bg_edittext"
            android:textSize="17dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btCancel"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:text="@string/btCancel"
            android:textSize="13dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"
            android:background="@drawable/background_button_cancel"/>
        <Button
            android:id="@+id/btAdd"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:text="@string/btAdd"
            android:textSize="13dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_button_add"/>
    </RelativeLayout>

</LinearLayout>