<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogupActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="64dp" android:layout_marginLeft="64dp"
        android:id="@+id/etEmail"
        android:hint="@string/etEmail_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="8dp"
        android:layout_marginRight="64dp" android:layout_marginLeft="64dp"
        android:id="@+id/etPassword"
        android:hint="@string/etPassword_hint"/>
    <Button
        android:id="@+id/btLogup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:text="@string/btLogup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btLogup"
        android:layout_marginTop="16dp"/>
</RelativeLayout>