<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_header"
        android:padding="12dp"
        android:text="@string/tvEditCourse"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/lnAddNotiCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseName"
            android:textColor="#525252"/>
        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvLoading"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCourseId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseId"
            android:textColor="#525252"/>
        <TextView
            android:id="@+id/tvCourseId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvLoading"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCourseCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseCredits"
            android:textColor="#525252"/>
        <TextView
            android:id="@+id/tvCourseCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvLoading"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCourseFaculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseFaculty"
            android:textColor="#525252"/>
        <TextView
            android:id="@+id/tvCourseFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvLoading"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCourseSpecilization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseSpecilization"
            android:textColor="#525252"/>
        <TextView
            android:id="@+id/tvCourseSpecilization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvLoading"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCourseFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseFee"
            android:textColor="#525252"/>
        <TextView
            android:id="@+id/tvCourseFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvLoading"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCourseTimeTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tvCourseTimeTable"
            android:textColor="#525252"/>
        <EditText
            android:id="@+id/etCourseTimeTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:hint="@string/tvHintCourseTimeTable"
            android:background="@drawable/bg_edittext"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left" android:layout_marginStart="16dp"
            android:text="@string/tvRemindEditCourseTimeTable"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btCancel"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:text="@string/btCancel"
            android:textSize="13dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"
            android:background="@drawable/background_button_cancel"/>
        <Button
            android:id="@+id/btEdit"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:text="@string/btEdit"
            android:textSize="13dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_button_add"/>
    </RelativeLayout>

</LinearLayout>