<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/imgSVDescription"
        android:id="@+id/img1"
        android:layout_width="206dp"
        android:layout_height="188dp"
        android:layout_marginTop="58dp"
        android:scaleType="fitStart"
        android:src="@drawable/vector1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="@string/app_name_vn"
        android:textColor="#A80874"
        android:textSize="26sp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
        android:paddingLeft="24dp" android:paddingRight="24dp"
        android:hint="@string/actvRole_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:startIconDrawable="@drawable/ic_role">

        <AutoCompleteTextView
            android:id="@+id/actvRole"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:padding="0dp"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:inputType="none"
            android:ellipsize="end"
            android:maxLines="1"
            android:enabled="false"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/til"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <!--Email input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/tilEmail_hint"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/metEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@id/tilEmail"
            android:layout_marginTop="8dp"
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/tilPassword_hint"
            app:boxStrokeColor="#000000"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_key">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/metPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilPassword"
            android:hint="@string/cbRememberMe_hint"
            android:textColorHint="#FF2C2C2C"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="150dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp" android:paddingRight="16dp"
        android:background="@drawable/background_button_login"
        android:text="@string/btLogin"
        android:textColor="@color/white"
        android:elevation="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvLogup"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>