<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChiTietMHFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourseName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/tvCourseName"
            android:textAlignment="center"/>

        <RelativeLayout
            android:id="@+id/rlCourseId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvCourseName"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseId"/>

            <TextView
                android:id="@+id/tvCourseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:text="@string/tvLoading"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseId"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseCredits"/>
            <TextView
                android:id="@+id/tvCourseCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tvLoading"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseCredits"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseFaculty"/>
            <TextView
                android:id="@+id/tvCourseFaculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tvLoading"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseSpecilization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseFaculty"
            android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:text="@string/tvCourseSpecilization"/>
        <TextView
            android:id="@+id/tvCourseSpecilization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/tvLoading"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseTimeTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseSpecilization"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseTimeTable"/>
            <TextView
                android:id="@+id/tvCourseTimeTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tvLoading"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseTimeTable"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseStartDate"/>
            <TextView
                android:id="@+id/tvCourseStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tvLoading"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseStartDate"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseEndDate"/>
            <TextView
                android:id="@+id/tvCourseEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tvLoading"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCourseFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rlCourseEndDate"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/tvCourseFee"/>
            <TextView
                android:id="@+id/tvCourseFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/tvLoading"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>